Updated web site with new information

--- a/htdocs/Authors.htm
+++ b/htdocs/Authors.htm
@@ -40,7 +40,8 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
     <td colspan="3">&nbsp;</td>
   </tr>
   <tr>
-    <td colspan="3"><!-- #BeginEditable "Text" --> 
+    <td colspan="3">
+<!-- #BeginEditable "Text" --> 
       <h2>John Adcock</h2>
       <blockquote> 
         <p>John is the founder of the project. He did huge amounts of full time 
@@ -57,10 +58,10 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
       <blockquote> 
         <p> 
           Mark authored the 3:2 pulldown algorithm that forms the basis of the 
-          algorithm implemented into dTV by John Adcock. He also does other programming 
+          algorithm implemented into DScaler by John Adcock. He also does other programming 
           tasks like code cleanup, merging, documenting, testing, enhancing of 
-          contributors' changes that are submitted to the project. He also enhances 
-          dTV with his own changes to certain parts of the code, including improvements 
+          contributors' changes that are submitted to the project. He also enhances
+          DScaler with his own changes to certain parts of the code, including improvements 
           to the deinterlacer modes.</p>
       </blockquote>
       <h2><br>
@@ -89,17 +90,18 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
       <h2>Michael Eskin </h2>
       <blockquote>
         <p>An engineer working at Conextant Systems Inc., the makers of the 8x8
-        series chips that dTV runs on.&nbsp; He basically meditates peace
-        between the dTV software and the 8x8 video capture hardware.&nbsp; When
+        series chips that DScaler runs on.&nbsp; He basically meditates peace
+        between the DScaler software and the 8x8 video capture hardware.&nbsp; When
         any of us fails on a nasty 8x8 issue, he takes over and gets the job
         done from time to time.&nbsp; One of his several valuable contributions
-        include a bug fix to make Macrovision-encoded sources watchable in dTV,
+        include a bug fix to make Macrovision-encoded sources watchable in DScaler,
         without purple-lines interference.</p>
       <p>&nbsp;</p>
       </blockquote>
       <p>Please see the <a href="Thanks.htm">Thanks</a> file for an incomplete 
         list of the many others who have contributed time and effort.</p>
-      <!-- #EndEditable --></td>
+<!-- #EndEditable -->
+</td>
   </tr>
   <tr> 
     <td colspan="3">&nbsp;</td>
