--- a/htdocs/Thanks.htm
+++ b/htdocs/Thanks.htm
@@ -39,18 +39,28 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
     <td colspan="3">&nbsp;</td>
   </tr>
   <tr>
-    <td colspan="3"><!-- #BeginEditable "Text" --> 
+    <td colspan="3">
+<!-- #BeginEditable "Text" --> 
       <p> See <a href="Authors.htm">Authors</a> for up to date list of developers 
         who have contributed code to the project.</p>
       <p>See <a href="Thanks_MultiDec.txt">Thanks_MultiDec.txt</a> for a list 
-        of thanks for the project dTV was based upon.</p>
+        of thanks for the project DScaler was based upon.</p>
       <ol>
+        <li>A big debt a gratitude is due to Mark Rejhon for his 3:2 algorithm 
+          and his help testing, promoting DScaler but particularly for his vision 
+          and his refusal to accept second best.</li>
+        <li>Thanks to Michael Samblanet, who contributed the aspect ratio control 
+          code.</li>
         <li>Thanks to Daniel Schmelzer for his hard work creating and updating 
-          the website. Love the logo!&nbsp;</li>
+          the website.&nbsp;</li>
+        <li>Thanks to Steve Grimm for his work on the new and old methods of 3:2 
+          pulldown and to his contribution of the aspect ratio autodetect code.</li>
+        <li>Thanks to Tom Barry for his implementation of triple buffering and 
+          his synchronization fix, as well as his contribution of low-level user 
+          manipulation of the bt chipset.</li>
         <li>Thanks to Yvon Quere and Ali for finding, using and promoting bTV 
           and Yvon for creating and updating the FAQ.</li>
         <li>Thanks to Jason Castle for updating the todo and bugs pages.</li>
-        <li>Thanks to everybody on the deinterlace project mailing list.</li>
         <li>Thanks to Borg, creator of bTV, for writing the first ever intelligent 
           computer deinterlacing program--the inspiration for this project.</li>
         <li>Thanks to all at the AVSForums for your encouragement and help. The 
@@ -61,8 +71,13 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
         <li>Thanks to Steaphan Greene, Øyvind Aabling, Octavian Purdila, Vladimir 
           Dergachev and Christian Lupien&#151;the GATOS developers&#151;for the 
           screen capture code. </li>
+        <li>Thanks to Torbjörn Jansson for his bug fixes.</li>
+        <li>Thanks to Erik Språng for the new DScaler logo. </li>
+        <li>Thanks to Phat Phreddy for the new DScaler domains. </li>
+        <li>Finally thanks to everybody on the deinterlace project mailing list.</li>
       </ol>
-      <!-- #EndEditable --></td>
+<!-- #EndEditable -->
+	</td>
   </tr>
   <tr> 
     <td colspan="3">&nbsp;</td>
