--- a/htdocs/user_support.htm
+++ b/htdocs/user_support.htm
@@ -40,32 +40,36 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
     <td colspan="3">&nbsp;</td>
   </tr>
   <tr> 
-    <td colspan="3"><!-- #BeginEditable "Text" --> 
-      <p>Currently, all support for DScaler is provided through the <a href="http://www.avsforum.com/ubbcgi/Ultimate.cgi?action=intro&showall=1">AVS 
+    <td colspan="3">
+<!-- #BeginEditable "Text" --> 
+      <p>Currently, most for DScaler is provided through the <a href="http://www.avsforum.com/ubbcgi/Ultimate.cgi">AVS 
         Home Theater PC Forum</a>, the largest such forum on the internet and 
-        a great place to pick up information and advice. You can post questions, bug reports, and suggestions 
+        a great place to pick up information and advice. Please feel free 
+        to stop by and say hello. You can post questions, bug reports, and suggestions 
         there. We suggest that you do a <a href="http://www.avsforum.com/ubbcgi/search.cgi?action=intro">search</a> 
-        of the forum to ensure that your item is not duplicative.&nbsp; When
-      using this search you must select &quot;Home Theater Computers&quot; in
-      the Search Forum/Archive box.</p>
-      <p>Please do <u>not</u> email the developers directly about DScaler.</p>
+        of the forum to ensure that your question has not already been answered.</p>
       <p>Support is given by the helpful members of the community, whether they 
         be involved in this project or not. However, some people that may appear 
         often to answer user questions and who are affiliated with project include:</p>
+      <p>Bugs can also be posted <a href="http://sourceforge.net/bugs/?group_id=7420">here</a>,
+      this list should reflect the current known bugs.&nbsp; Please try to give
+      as much information as possible when describing youe problem.</p>
       <p><u>User support<br>
-      </u>Dan Schmelzer (dschmelzer), developer and user support<br>
-        Yvon Quere (Yvonus), the FAQ maintainer<br>
-        Jason Castle (jcastle), the todo and bugs pages maintainer<br>
-      (Slithy Tove), the .ini file page maintainer.</p>
-      <p><u>dTV Developers</u><br>
-        John Adcock (JohnAd)<br>
-      Mark Rejhon<br>
-        Steve Grimm (StevenGrimm)<br>
-        Tom Barry (trbarry)<br>
-      Mark Fiechtner<br>
-        Peter Gubanov (pgubanov)<br>
-        Michael Eskin (eskin)</p>
-      <!-- #EndEditable --></td>
+        </u>
+        Dan Schmelzer (dschmelzer), developer and user support;<br>
+        Yvon Quere (Yvonus), the FAQ maintainer;<br>
+        Jason Castle (jcastle), the todo and bugs pages maintainer; and<br>
+        (Slithy Tove), the .ini file page maintainer.</p>
+      <p><u>DScaler Developers</u><br>
+        John Adcock (JohnAd), the founder and administrator of the project;<br>
+        Mark Rejhon, developer;<br>
+        Steve Grimm (StevenGrimm), developer;<br>
+        Tom Barry (trbarry), developer;<br>
+        Mark Fiechtner, developer;<br>
+        Peter Gubanov (pgubanov), developer; and<br>
+        Michael Eskin (eskin), Conexant representative developer.</p>
+<!-- #EndEditable -->
+	</td>
   </tr>
   <tr> 
     <td colspan="3">&nbsp;</td>
