Added new version

--- a/htdocs/downloads.htm
+++ b/htdocs/downloads.htm
@@ -39,13 +39,33 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
     <td colspan="3" height="20">&nbsp;</td>
   </tr>
   <tr>
-    <td colspan="3" height="1542"><!-- #BeginEditable "Text" --> 
-      <p>Version 2.1.2&#151;<b>Beta</b>&#151;[<a href="http://prdownloads.sourceforge.net/deinterlace/dTV212exe.zip">Binary 
-        Zipped</a>] [<a href="http://prdownloads.sourceforge.net/deinterlace/dTV212src.zip">Source Zipped</a>] [<a href="readme/dTV_Readme2110.htm">README</a>]<br>
-      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Advanced flags fixes&nbsp;<br>
-      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Mpact2 24 bit mode fix (works but you can't
-      see menu or OSD)<br>
-      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Tuner menu option fix.
+    <td colspan="3" height="1542">
+<!-- #BeginEditable "Text" -->
+      <p>Version 2.3.0&#151;<b>Beta</b>&#151;[<a href="http://prdownloads.sourceforge.net/deinterlace/DScaler230exe.zip">Binary 
+        Zipped</a>] [<a href="http://prdownloads.sourceforge.net/deinterlace/DScaler230src.zip">Source Zipped</a>] [<a href="readme/DScaler_Readme230.htm">README</a>]<br>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Plug-in architecture<br>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Judder reduction<br>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; New Greedy 2 Frame method (good for sports)<br>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Gamma filter<br>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Option to save settings per format/source<br>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; WSS decoding for Pal and Secam sources<br>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Use of aspect ratio WSS data<br>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 3 screens of Information using OSD (general screen,
+      statistics screen and WSS data decoding screen)<br>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Autohide cursor feature<br>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Popup menu - right click in window<br>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; New menu with direct access to all channels<br>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Command to go to the last viewed channel<br>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Single click replaced by double click to switch between
+      window mode and fullscreen mode<br>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Option to save last used video
+      format per video input<br>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Zoom feature - still experimental<br>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Adjustable window position<br>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Orbiting &amp; Bounce<br>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; CC support - experimental - lots of known problems<br>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Teletext support - experimental - lots of known
+      problems<br>
       </p>
       <p><br>
       Version 2.1.1&#151;<b>Superceded</b>&#151;[<a href="http://prdownloads.sourceforge.net/deinterlace/dTV211exe.zip">Binary 
