Updated for new release

--- a/htdocs/developers.htm
+++ b/htdocs/developers.htm
@@ -48,11 +48,10 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
         etc.). Your skills will be utilized immediately, as we seek to keep this 
         extraordinary momentum going. Please see the <a href="Developer_docs.htm">Developer 
         Documentation</a> to get started on DScaler development and then introduce 
-        yourself to the <a href="http://sourceforge.net/mail/?group_id=7420">mailing 
+        yourself to the <a href="http://lists.sourceforge.net/lists/listinfo/deinterlace-discuss">mailing 
         list</a>.</p>
-      <p>Please refer to the <a href="bugs/Bugs_108.htm">bugs</a> and <a href="Todo.htm">Todo</a> 
-        pages for the current task list (Note, these files may be outdated by 
-        the time you read this page.&nbsp; It's recommended to join the mailing 
+      <p>Please refer to the <a href="http://sourceforge.net/tracker/?group_id=7420&atid=107420">bugs</a> and <a href="http://sourceforge.net/pm/task.php?group_project_id=7174&group_id=7420&func=browse">Todo</a> 
+        pages for the current task list (Note, these may be outdated. It's recommended to join the mailing 
         list to keep yourself up to date!). If you think that you can take on 
         a part of one of these tasks, everyone on the mailing list would love 
         to hear from you.</p>
