--- a/htdocs/downloads.htm
+++ b/htdocs/downloads.htm
@@ -67,8 +67,13 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Teletext support - experimental - lots of known
       problems<br>
       </p>
-      <p><br>
-      Version 2.1.1&#151;<b>Superceded</b>&#151;[<a href="http://prdownloads.sourceforge.net/deinterlace/dTV211exe.zip">Binary 
+      <p>Version 2.1.2&#151;<b>Stable</b>&#151;[<a href="http://prdownloads.sourceforge.net/deinterlace/dTV212exe.zip">Binary Zipped</a>]  [<a href="http://prdownloads.sourceforge.net/deinterlace/dTV212src.zip">Source Zipped</a>] [<a href="readme/dTV_Readme2110.htm">README</a>]<br>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Advanced flags fixes&nbsp;<br>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Mpact2 24 bit mode fix (works but you can't
+     see menu or OSD)<br>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Tuner menu option fix.
+      </p>
+      <p>Version 2.1.1&#151;<b>Superceded</b>&#151;[<a href="http://prdownloads.sourceforge.net/deinterlace/dTV211exe.zip">Binary 
         Zipped</a>] [<a href="http://prdownloads.sourceforge.net/deinterlace/dTV211src.zip">Source Zipped</a>] [<a href="readme/dTV_Readme2110.htm">README</a>]<br>
       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Preliminary judder fix<br>
       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Steve's new 2-Frame Deinterlacing algorithm<br>
