Made autosave settings optional Updated help file

--- a/dTV/Help/FAQ.htm
+++ b/dTV/Help/FAQ.htm
@@ -384,7 +384,8 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
         that is already in the <a href="http://sourceforge.net/pm/task.php?group_project_id=7174&group_id=7420&func=browse">Tasks list</a>, join the <a href="http://lists.sourceforge.net/lists/listinfo/deinterlace-discuss">mailing 
         list</a>. All relevant information to get you started are on the <a href="http://deinterlace.sourceforge.net/developers.htm">developers 
         page</a>. 
-      <!-- #EndEditable --></td>
+<!-- #EndEditable -->
+	</td>
   </tr>
   <tr> 
     <td colspan="3">&nbsp;</td>
