--- a/dTV/Help/IniFile.HTM
+++ b/dTV/Help/IniFile.HTM
@@ -40,7 +40,8 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
     <td colspan="3">&nbsp;</td>
   </tr>
   <tr>
-    <td colspan="3"><!-- #BeginEditable "Text" --> 
+    <td colspan="3">
+<!-- #BeginEditable "Text" --> 
       <p>Many features of the program are configurable through the menu system.&nbsp; 
         Some advanced settings and functions in beta test will require changes 
         to this ini file to work properly.&nbsp; All the settings used by the 
@@ -1069,13 +1070,6 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
           </td>
         </tr>
       </table>
-      <!-- #EndEditable --></td>
-  </tr>
-  <tr> 
-    <td colspan="3">&nbsp;</td>
-  </tr>
-  <tr>
-    <td colspan="3">
 
 <h2 id="modes">Deinterlace Modes</h2>
 
@@ -1197,6 +1191,14 @@ video with low amounts of motion.</td>
 
 </table>
 
+<!-- #EndEditable -->
+	</td>
+  </tr>
+  <tr> 
+    <td colspan="3">&nbsp;</td>
+  </tr>
+  <tr>
+    <td colspan="3">
     </td>
   </tr>
   <tr> 
