--- a/dTV/Help/Thanks.htm
+++ b/dTV/Help/Thanks.htm
@@ -39,7 +39,8 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
     <td colspan="3">&nbsp;</td>
   </tr>
   <tr>
-    <td colspan="3"><!-- #BeginEditable "Text" --> 
+    <td colspan="3">
+<!-- #BeginEditable "Text" --> 
       <p> See <a href="Authors.htm">Authors</a> for up to date list of developers 
         who have contributed code to the project.</p>
       <p>See <a href="Thanks_MultiDec.txt">Thanks_MultiDec.txt</a> for a list 
@@ -75,10 +76,19 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
         <li>Thanks to Phat Phreddy for the new DScaler domains. </li>
         <li>Finally thanks to everybody on the deinterlace project mailing list.</li>
       </ol>
-      <!-- #EndEditable --></td>
+<!-- #EndEditable -->
+	</td>
+  </tr>
+  <tr> 
+    <td colspan="3">&nbsp;</td>
+  </tr>
+  <tr bgcolor="#FFCC00"> 
+    <td colspan="3"> 
+      <div align="center"><img src="images/yellowspacer.gif" width="100%" height="2"></div>
+    </td>
   </tr>
 </table>
 <p>&nbsp;</p>
-<p>&nbsp; </p>
 </body>
-<!-- #EndTemplate --></html>
+<!-- #EndTemplate -->
+</html>
