--- a/dTV/Help/keyboard.htm
+++ b/dTV/Help/keyboard.htm
@@ -40,11 +40,9 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
     <td colspan="3">&nbsp;</td>
   </tr>
   <tr>
-    <td colspan="3"><!-- #BeginEditable "Text" --> 
-
+    <td colspan="3">
+<!-- #BeginEditable "Text" --> 
 <p><b>TV Tuner</b></p>
-
-
 
 <table border="0">
   <tr>
@@ -560,10 +558,8 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
           </td>
   </tr>
 </table>
-
-
-
-      <!-- #EndEditable --></td>
+<!-- #EndEditable -->
+</td>
   </tr>
   <tr> 
     <td colspan="3">&nbsp;</td>
