--- a/dTV/Help/user_support.htm
+++ b/dTV/Help/user_support.htm
@@ -40,7 +40,8 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
     <td colspan="3">&nbsp;</td>
   </tr>
   <tr> 
-    <td colspan="3"><!-- #BeginEditable "Text" --> 
+    <td colspan="3">
+<!-- #BeginEditable "Text" --> 
       <p>Currently, most for DScaler is provided through the <a href="http://www.avsforum.com/ubbcgi/Ultimate.cgi">AVS 
         Home Theater PC Forum</a>, the largest such forum on the internet and 
         a great place to pick up information and advice. Please feel free 
@@ -67,9 +68,19 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
         Mark Fiechtner, developer;<br>
         Peter Gubanov (pgubanov), developer; and<br>
         Michael Eskin (eskin), Conexant representative developer.</p>
-      <!-- #EndEditable --></td>
+<!-- #EndEditable -->
+	</td>
+  </tr>
+  <tr> 
+    <td colspan="3">&nbsp;</td>
+  </tr>
+  <tr bgcolor="#FFCC00"> 
+    <td colspan="3"> 
+      <div align="center"><img src="images/yellowspacer.gif" width="100%" height="2"></div>
+    </td>
   </tr>
 </table>
+<p>&nbsp;</p>
 </body>
 <!-- #EndTemplate -->
 </html>
