--- a/dTV/Help/Authors.htm
+++ b/dTV/Help/Authors.htm
@@ -40,7 +40,8 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
     <td colspan="3">&nbsp;</td>
   </tr>
   <tr>
-    <td colspan="3"><!-- #BeginEditable "Text" --> 
+    <td colspan="3">
+<!-- #BeginEditable "Text" --> 
       <h2>John Adcock</h2>
       <blockquote> 
         <p>John is the founder of the project. He did huge amounts of full time 
@@ -99,10 +100,19 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
       </blockquote>
       <p>Please see the <a href="Thanks.htm">Thanks</a> file for an incomplete 
         list of the many others who have contributed time and effort.</p>
-      <!-- #EndEditable --></td>
+<!-- #EndEditable -->
+	</td>
+  </tr>
+  <tr> 
+    <td colspan="3">&nbsp;</td>
+  </tr>
+  <tr bgcolor="#FFCC00"> 
+    <td colspan="3"> 
+      <div align="center"><img src="images/yellowspacer.gif" width="100%" height="2"></div>
+    </td>
   </tr>
 </table>
 <p>&nbsp;</p>
-<p>&nbsp; </p>
 </body>
-<!-- #EndTemplate --></html>
+<!-- #EndTemplate -->
+</html>
