--- a/dTV/Help/DScaler_Readme.htm
+++ b/dTV/Help/DScaler_Readme.htm
@@ -47,17 +47,17 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
       &nbsp;&nbsp;&nbsp; New Greedy 2 Frame method (good for sports)<br>
       &nbsp;&nbsp;&nbsp; Gamma filter<br>
       &nbsp;&nbsp;&nbsp; Option to save settings per format/source<br>
-      &nbsp;&nbsp;&nbsp; <font SIZE="2">WSS decoding for Pal and Secam sources<br>
+      &nbsp;&nbsp;&nbsp; WSS decoding for Pal and Secam sources<br>
       &nbsp;&nbsp;&nbsp; Use of aspect ratio WSS data<br>
       &nbsp;&nbsp;&nbsp; 3 screens of Information using OSD (general screen,
-      statistics screen</font> <font SIZE="2">and WSS data decoding screen)<br>
-      </font>&nbsp;&nbsp;&nbsp; <font size="2">Autohide cursor feature<br>
+      statistics screen and WSS data decoding screen)<br>
+      &nbsp;&nbsp;&nbsp; Autohide cursor feature<br>
       &nbsp;&nbsp;&nbsp; Popup menu - right click in window<br>
       &nbsp;&nbsp;&nbsp; New menu with direct access to all channels<br>
       &nbsp;&nbsp;&nbsp; Command to go to the last viewed channel<br>
       &nbsp;&nbsp;&nbsp; Single click replaced by double click to switch between
-      window mode</font> <font size="2">and fullscreen mode<br>
-      </font>&nbsp;&nbsp;&nbsp; <font size="2">Option to save last used video
+      window mode and fullscreen mode<br>
+      &nbsp;&nbsp;&nbsp; >Option to save last used video
       format per video input<br>
       &nbsp;&nbsp;&nbsp; Zoom feature - still experimental<br>
       &nbsp;&nbsp;&nbsp; Adjustable window position<br>
@@ -104,13 +104,19 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
       <p><a href="IniFile.HTM">Ini File Settings</a></p>
       <p><a href="keyboard.htm"> Keyboard Shortcuts</a></p>
       <H2>Enjoy!</H2>
-      <!-- #EndEditable --></td>
+<!-- #EndEditable -->
+	</td>
   </tr>
-  <tr>
-    <td colspan="3"></td>
+  <tr> 
+    <td colspan="3">&nbsp;</td>
+  </tr>
+  <tr bgcolor="#FFCC00"> 
+    <td colspan="3"> 
+      <div align="center"><img src="images/yellowspacer.gif" width="100%" height="2"></div>
+    </td>
   </tr>
 </table>
 <p>&nbsp;</p>
-<p>&nbsp; </p>
 </body>
-<!-- #EndTemplate --></html>
+<!-- #EndTemplate -->
+</html>
