--- a/htdocs/developers.htm
+++ b/htdocs/developers.htm
@@ -106,31 +106,33 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
         Driver Project</a></p>
       <h2><br>
         AVScience Threads</h2>
-      <p><a href="http://www.avsforum.com/ubb/Forum12/HTML/007370.html">dTV 2.1.2 
+
+      <p>
+	<a href="http://www.avsforum.com/ubb/Forum12/HTML/010701.html">DScaler 2.3.0 
         Release Thread</a> (AVS Forum)<br>
-        <a href="http://www.avsforum.com/ubb/Forum12/HTML/005917.html">dTV 2.0.2 
+	<a href="http://www.avsforum.com/ubb/Forum12/HTML/007370.html">dTV 2.1.2 
         Release Thread</a> (AVS Forum)<br>
-        <a href="http://www.avsforum.com/ubb/Forum12/HTML/005313.html">dTV 2.0.0 
+        <a href="http://www.avsforum.com/ubb/Archives/Archive-000004/HTML/20010420-12-005917.html">dTV 2.0.2 
         Release Thread</a> (AVS Forum)<br>
-        <a href="http://www.avsforum.com/ubb/Forum12/HTML/005129.html">ANNOUNCEMENT: 
+        <a href="http://www.avsforum.com/ubb/Archives/Archive-000004/HTML/20010323-12-005313.html">dTV 2.0.0 
+        Release Thread</a> (AVS Forum)<br>
+        <a href="http://www.avsforum.com/ubb/Archives/Archive-000004/HTML/20010323-12-005129.html">ANNOUNCEMENT: 
         dTV 1.9 software video processor is now OUT</a> (AVS Forum)<br>
-        <a href="http://www.avsforum.com/ubb/Forum12/HTML/004448.html">NEW VERSION: 
+        <a href="http://www.avsforum.com/ubb/Archives/Archive-000004/HTML/20010323-12-004448.html">NEW VERSION: 
         dTV 1.8 released</a> (AVS Forum)<br>
-        <a href="http://www.avsforum.com/ubb/Forum12/HTML/004360.html">dTV 1.7 
+        <a href="http://www.avsforum.com/ubb/Archives/Archive-000004/HTML/20010323-12-004360.html">dTV 1.7 
         Experimental Beta </a>(AVS Forum)<br>
-        <a href="http://www.avsforum.com/ubb/Forum12/HTML/004188.html">dTV 1.6 
+        <a href="http://www.avsforum.com/ubb/Archives/Archive-000004/HTML/20010323-12-004188.html">dTV 1.6 
         Experimential Beta</a> (AVS Forum)<br>
-        <a href="http://www.avsforum.com/ubb/Forum12/HTML/004067.html">dTV 1.5 
+        <a href="http://www.avsforum.com/ubb/Archives/Archive-000004/HTML/20010323-12-004067.html">dTV 1.5 
         - Auto Pulldown detect & better video deinterlacing</a> (AVS Forum)<br>
-        <a href="http://www.avsforum.com/ubb/Forum12/HTML/004004.html">dTV Version 
+        <a href="http://www.avsforum.com/ubb/Archives/Archive-000004/HTML/20010323-12-004004.html">dTV Version 
         1.4</a> (AVS Forum)<br>
-        <a href="http://www.avsforum.com/ubb/Forum12/HTML/003921.html">dTV New 
+        <a href="http://www.avsforum.com/ubb/Archives/Archive-000004/HTML/20010323-12-003921.html">dTV New 
         Release Version 1.3</a> (AVS Forum)<br>
-        <a href="http://www.avsforum.com/ubb/Forum12/HTML/003825.html">New version 
+        <a href="http://www.avsforum.com/ubb/Archives/Archive-000004/HTML/20010323-12-003825.html">New version 
         of dTV - now with video souce deinterlacing</a><br>
-        <a href="http://www.avsforum.com/ubb/Forum12/HTML/003790.html">First Version 
-        of NTSC/PAL TV deinterlacing program</a><br>
-        <a href="http://www.avsforum.com/ubb/Forum12/HTML/000071.html">Marc Rejhon's 
+        <a href="http://www.avsforum.com/ubb/Archives/Archive-000004/HTML/20010323-12-000071.html">Marc Rejhon's 
         Algorithm for 3-2 Pulldown Deinterlacing</a></p>
       <!-- #EndEditable --></td>
   </tr>
