We should have done this earlier ;added Laurent Garnier to the coders list He simply did a lot of what has been advertised as "new" in DSCaler 2.3 http://www.avsforum.com/ubb/Forum12/HTML/010701.html

--- a/htdocs/Authors.htm
+++ b/htdocs/Authors.htm
@@ -88,16 +88,24 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
         </p>
       </blockquote>
       <h2>Michael Eskin </h2>
-      <blockquote>
-        <p>An engineer working at Conextant Systems Inc., the makers of the 8x8
-        series chips that DScaler runs on.&nbsp; He basically meditates peace
-        between the DScaler software and the 8x8 video capture hardware.&nbsp; When
-        any of us fails on a nasty 8x8 issue, he takes over and gets the job
-        done from time to time.&nbsp; One of his several valuable contributions
-        include a bug fix to make Macrovision-encoded sources watchable in DScaler,
-        without purple-lines interference.</p>
-      <p>&nbsp;</p>
+      <blockquote> 
+        <p>An engineer working at Conexant Systems Inc., the makers of the 8x8 
+          series chips that DScaler runs on.&nbsp; He basically meditates peace 
+          between the DScaler software and the 8x8 video capture hardware.&nbsp; 
+          When any of us fails on a nasty 8x8 issue, he takes over and gets the 
+          job done from time to time.&nbsp; One of his several valuable contributions 
+          include a bug fix to make Macrovision-encoded sources watchable in DScaler, 
+          without purple-lines interference.</p>
       </blockquote>
+      <h2>Laurent Garnier</h2>
+      <blockquote>
+        <p>Despite having really no link with the french DJ, he's the latest one 
+          on the DScaler boat. French however, he coded the autodetection of WSS 
+          (WideScreen Signalling), improved a lot the OSD with various &quot;status 
+          screens&quot;. He also did the popup menu, per-format settings persistency. 
+          He's the second European coder, along with John Adcock.</p>
+      </blockquote>
+      <p>&nbsp;</p>
       <p>Please see the <a href="Thanks.htm">Thanks</a> file for an incomplete 
         list of the many others who have contributed time and effort.</p>
 <!-- #EndEditable -->
