--- a/htdocs/Thanks.htm
+++ b/htdocs/Thanks.htm
@@ -58,8 +58,11 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
         <li>Thanks to Tom Barry for his implementation of triple buffering and 
           his synchronization fix, as well as his contribution of low-level user 
           manipulation of the bt chipset.</li>
-        <li>Thanks to Yvon Quere and Ali for finding, using and promoting bTV 
-          and Yvon for creating and updating the FAQ.</li>
+        <li>Thanks to Yvon Quere and Ali for finding, using and promoting bTV, 
+          the inspiration for DScaler (previously dTV) </li>
+        <li>Yvon for creating and updating the english FAQ, maintaining the French 
+          translation, and coordinating the other translations (Ricardo Cruz for 
+          the Portuguese version)</li>
         <li>Thanks to Jason Castle for updating the todo and bugs pages.</li>
         <li>Thanks to Borg, creator of bTV, for writing the first ever intelligent 
           computer deinterlacing program--the inspiration for this project.</li>
