Udded Torbjorn to authors

--- a/htdocs/Authors.htm
+++ b/htdocs/Authors.htm
@@ -30,7 +30,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
   <tr> 
     <td width="160"><img src="images/dscalerlogo.jpg" alt="DScaler logo"></td>
     <td colspan="2" align="right" valign="bottom">
-      <font face="Verdana, Arial, Helvetica, sans-serif" size="5"><b><!-- #BeginEditable "Page%20Title" -->dTV 
+      <font face="Verdana, Arial, Helvetica, sans-serif" size="5"><b><!-- #BeginEditable "Page%20Title" -->DScaler 
       Authors&nbsp;<!-- #EndEditable --></b></font></td>
   </tr>
   <tr bgcolor="#FFCC00" align="right"> 
@@ -44,7 +44,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
 <!-- #BeginEditable "Text" --> 
       <h2>John Adcock</h2>
       <blockquote> 
-        <p>John is the founder of the project. He did huge amounts of full time 
+        <p>John is the founder and maintainer of the project. He did huge amounts of full time 
           development on versions 
           1.0 through 1.6 Beta 4. He did most of the work cleaning, translating 
           and legalizing Multidec. He put into code, the world's first open-source 
@@ -104,6 +104,10 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
           (WideScreen Signalling), improved a lot the OSD with various &quot;status 
           screens&quot;. He also did the popup menu, per-format settings persistency. 
           He's the second European coder, along with John Adcock.</p>
+      </blockquote>
+      <h2>Torbjörn Jansson</h2>
+      <blockquote>
+        <p>Added the new generic settings dialog and has provided many bug fixes</p>
       </blockquote>
       <p>&nbsp;</p>
       <p>Please see the <a href="Thanks.htm">Thanks</a> file for an incomplete 
